# muteki-shims

./: .clangd  .gitignore  .gitmodules  Doxyfile  LICENSE.txt  README.md  abi_8h.html  abi_8h.js  abi_8h_source.html  annotated.html  annotated_dup.js  audio_8h.html  audio_8h.js  audio_8h_source.html  button_8h.html  button_8h.js  button_8h_source.html  canvas_8h.html  canvas_8h.js  canvas_8h_source.html  classes.html  common_8h.html  common_8h.js  common_8h_source.html  datetime_8h.html  datetime_8h.js  datetime_8h_source.html  deskbox_8h_source.html  devio_8h.html  devio_8h.js  devio_8h_source.html  dir_007330e17bdff1809e538c1703de6793.html  dir_007330e17bdff1809e538c1703de6793.js  dir_2e14aa908ed68e70b328171ee229a0ea.html  dir_2e14aa908ed68e70b328171ee229a0ea.js  dir_38022219427cd2fba679d3084a363551.html  dir_38022219427cd2fba679d3084a363551.js  dir_89e46442482f5622ab783d5d97d4fad2.html  dir_89e46442482f5622ab783d5d97d4fad2.js  dir_d44c64559bbebec7f509842c48db8b23.html  (+343 more)
.github/workflows/: doxygen.yml
include/: muteki.h
include/muteki/: audio.h  common.h  datetime.h  devio.h  errno.h  file.h  fs.h  ftl.h  ini.h  loader.h  memory.h  syscall.h  system.h  threading.h  ui.h  utf16.h  utils.h
include/muteki/ui/: canvas.h  common.h  event.h  font.h  surface.h  views.h  widgets.h
include/muteki/ui/views/: deskbox.h  filepicker.h  messagebox.h
include/muteki/ui/widgets/: button.h
include/osdep/: abi.h  heap.h  ktls.h  threading.h  utls.h
meson-cross/: README.md  arm-bestartos.ini  arm-mingw32ce.ini  arm-none-bestaeabi-arm11.ini  arm-none-bestaeabi-arm9.ini  arm-none-bestaeabi.ini  arm-none-eabi-devkitarm.ini  arm-none-eabi.ini
scripts/: gen_ghidra_prf.py  gen_syscall_shim.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_d.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  (+99 more)
src/: dll_entry_stub.s  syscall.s  test.c
src/osdep/: heap.c  ktls.c  threading.c  utls.c
syscall_def/: gen_syscall_shim.py  syscalls_krnl.json  syscalls_krnl_hpprime.json  syscalls_krnl_pocketchallenge.json  syscalls_sdk.json  syscalls_sdk_hpprime.json
